--- a/ui_data/editor.glade
+++ b/ui_data/editor.glade
@@ -14,6 +14,21 @@
       <row>
         <col id="0" translatable="yes">depressed 😖️</col>
       </row>
+      <row>
+        <col id="0" translatable="yes">happy 😃️</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">excited 😁️</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">bored 🙇‍♂️️</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">sick 🤒️</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">lonely 😭️</col>
+      </row>
     </data>
   </object>
   <object class="GtkBox" id="editor">
