--- a/ui_data/memory.glade
+++ b/ui_data/memory.glade
@@ -82,6 +82,7 @@
         <property name="can_focus">False</property>
         <property name="halign">start</property>
         <property name="valign">start</property>
+        <property name="margin_top">5</property>
         <property name="label" translatable="yes">content</property>
         <property name="wrap">True</property>
         <property name="wrap_mode">word-char</property>
